--- a/client/src/app/components/directives/dialogs/yes-no-dialog/yes-no-dialog.component.html
+++ b/client/src/app/components/directives/dialogs/yes-no-dialog/yes-no-dialog.component.html
@@ -1,5 +1,5 @@
 <div md-dialog-title>{{title}}</div>
-<md-dialog-content style="overflow-y:auto; height:calc(100% - 88px);">
+<md-dialog-content>
 	<div *ngFor="let p of prompt" style="min-height:19px;">{{p}}</div>
 </md-dialog-content>
 <md-dialog-actions>
