--- a/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
+++ b/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
@@ -24,6 +24,10 @@
 			<md-icon>person_pin</md-icon>
 			<span>Profile</span>
 		</button>
+		<button md-menu-item routerLink="info">
+			<md-icon>info</md-icon>
+			<span>About</span>
+		</button>
 		<button md-menu-item (click)="logout()">
 			<md-icon>exit_to_app</md-icon>
 			<span>Logout</span>
