--- a/client/src/app/components/directives/pickers/date-picker-input/date-picker-input.component.html
+++ b/client/src/app/components/directives/pickers/date-picker-input/date-picker-input.component.html
@@ -5,7 +5,7 @@
 	<button md-icon-button [mdMenuTriggerFor]="picker">
 		<md-icon>today</md-icon>
 	</button>
-	<md-menu #picker="mdMenu" xPosition="before">
-		<app-date-picker [date]="actualDate" (dateChanged)="datePickerChanged($event)"></app-date-picker>
+	<md-menu #picker="mdMenu" xPosition="before" class="date-picker-input-menu">
+		<app-date-picker width="320" [date]="actualDate" (dateChanged)="datePickerChanged($event)"></app-date-picker>
 	</md-menu>
 </div>
