--- a/client/src/app/components/mobile/mobile-upload/mobile-upload.component.html
+++ b/client/src/app/components/mobile/mobile-upload/mobile-upload.component.html
@@ -1,9 +1,5 @@
-<div class="component">
-    <h3>Upload Data From Mobile App</h3>
-    <div>
-        <app-file-upload #fileUpload (change)="fileUpload.fileSelected()" [restUrl]="'mobile'" (uploadResult)="test($event)"></app-file-upload>
-    </div>
-    <div style="margin-top:16px;">
-        <button md-raised-button color="accent" (click)="fileUpload.upload()">UPLOAD</button>
-    </div>
-</div>
+<div class="page-title">Upload File from Android App</div>
+<div class="page-subtitle">Select a data file that was exported from the Android application to upload to the web application.</div>
+<div class="page-content">
+    <app-file-upload #fileUpload restUrl="mobile" label="BROWSE..." (uploadResult)="test($event)"></app-file-upload>
+<div class="page-content">
