selector cards redo

--- a/client/src/app/components/public/info/info.component.html
+++ b/client/src/app/components/public/info/info.component.html
@@ -45,6 +45,8 @@
 					</ul>
 				</div>
 			</div>
+			<h2>Resources</h2>
+			<p>Github - <a href="https://github.com/landfill-eforms">https://github.com/landfill-eforms</a></p>
 		</div>
 	</md-tab>
 	<md-tab label="Release Notes">
