--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -278,42 +278,11 @@ md-toolbar-row {
 }
 
 .dialog-form-container {
-	padding: 24px 16px 16px 16px;
+	padding: 0 8px;
+	textarea {
+		resize: none;
+	}
 }
-
-// .section-single {
-// 	margin: 24px;
-// 	padding: 24px !important;
-// }
-
-// .section-multiple {
-// 	margin: 12px;
-// 	padding: 24px !important;
-// }
-
-// .section-multiple-container {
-// 	padding: 12px;
-// 	margin: 16px;
-// 	background: #EEE;
-// }
-
-// .section-title {
-// 	color: rgba(0,0,0,0.87);
-// 	font-weight: 400;
-// 	font-weight: normal;
-// 	font-size: 20px;
-// 	padding: 16px;
-// }
-
-// .section-subtitle {
-// 	font-weight: lighter;
-// 	font-size: 1.0rem;
-// 	padding: 24px;
-// }
-
-// .section-form-container {
-// 	padding: 24px 16px 16px 16px;
-// }
 
 .data-table-scrollable {
 	height: 100%;
